Update Changelog & Documentation